--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,29 @@
-.DS_Store
+target/
+!.mvn/wrapper/maven-wrapper.jar
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### Other editors ###
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
 node_modules/
 dist/
-npm-debug.log
-/target/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+test/unit/coverage
+test/e2e/reports
+selenium-debug.log
+
 .settings
 .project
 .classpath
-/.idea/
-/*.iml
+
+.DS_Store
